welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: value int
int nbPas=0
^Variables:3: error: value ! is not a member of Unit
  avance()!
          ^Variables:4: error: not found: value nbPas
  nbPas= nbPas + 1
  ^Variables:4: error: not found: value nbPas
  nbPas= nbPas + 1
         ^Variables:6: error: not found: value nbPas
recule(nbPas:Int)
       ^